--- a/automations/misc.yaml
+++ b/automations/misc.yaml
@@ -51,3 +51,36 @@
     data:
       message: Downstairs thermostat back online (maybe the power came back on?)
     service: notify.notify
+
+- alias: Notify on spare room motion
+  description: Spare room motion detected
+  trigger:
+    platform: state
+    entity_id: binary_sensor.spare_room_motion_motion
+    to: 'on'
+  action:
+    data:
+      message: Spare room motion detected
+    service: notify.mobile_app_iphone
+
+- alias: Holiday lights on
+  description: Turn on holiday lights on porch
+  trigger:
+    platform: sun
+    event: sunset
+    offset: "-00:30:00"
+  action:
+    service: light.turn_on
+    entity_id: light:holiday_lights
+  mode: single
+
+  - alias: Holiday lights off
+  description: Turn off holiday lights on porch
+  trigger:
+    platform: sun
+    event: sunrise
+    offset: "+00:30:00"
+  action:
+    service: light.turn_off
+    entity_id: light:holiday_lights
+  mode: single
