--- a/automations/flic.yaml
+++ b/automations/flic.yaml
@@ -8,10 +8,20 @@
       entity_id: input_select.basement_lights
       option: 'Working'
 
-- alias: Set basement office to Off on Flic double click
+- alias: Set basement office to On on Flic double click
   trigger:
     platform: webhook
     webhook_id: flic_office-desk_doubleclick
+  action:
+    service: input_select.select_option
+    data:
+      entity_id: input_select.basement_lights
+      option: 'On'
+
+- alias: Set basement office to Off on Flic hold
+  trigger:
+    platform: webhook
+    webhook_id: flic_office-desk_hold
   action:
     service: input_select.select_option
     data:
