--- a/automations/spare-room.yaml
+++ b/automations/spare-room.yaml
@@ -46,3 +46,32 @@
     service: switch.toggle
     entity_id: switch.spare_room_dresser
   mode: single
+
+- alias: Toggle nightstand lamp on Flic click
+  trigger:
+    platform: webhook
+    webhook_id: flic_spare-room_click
+  action:
+    service: switch.toggle
+    entity_id: switch.spare_room_lamp
+  mode: single
+
+- alias: Toggle dresser lamp on Flic double-click
+  trigger:
+    platform: webhook
+    webhook_id: flic_spare-room_doubleclick
+  action:
+    service: switch.toggle
+    entity_id: switch.spare_room_dresser
+  mode: single
+
+- alias: Turn off all lights on Flic hold
+  trigger:
+    platform: webhook
+    webhook_id: flic_spare-room_hold
+  action:
+    - service: switch.turn_off
+      entity_id: switch.spare_room_lamp
+    - service: switch.turn_off
+      entity_id: switch.spare_room_dresser
+  mode: single
