Add some HACS repos

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,3 +50,6 @@ group: !include groups.yaml
 automation: !include_dir_merge_list automations
 script: !include scripts.yaml
 scene: !include_dir_merge_list scenes
+
+frontend:
+  themes: !include_dir_merge_named themes
