--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -1,114 +1,32 @@
 ---
 # This is a dummy file for using when testing the configuration
-# But for publishing on GitHub as well.
+# and for publishing on GitHub as well.
 # These are (of course) not my actual secrets...
 
-# Apple TV
-apple_tv_livingroom_host: 192.168.0.1
-apple_tv_livingroom_login_id: 00000000-0000-0000-0000-000000000000
+# General info
+property_name: Home
+latitude: 30.000000
+longitude: -80.000000
+# Timezone names are listed here: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Etc/UTC
+gmail_address: user@example.com
 
-# Dark Sky
-darksky_api_key: 00aa00aa00aa00aa00aa00aa00aa00aa
+tuya_password: p@ssword
 
-# ESPHome chips
-esphome_esp01_api_password: password
-esphome_esp01_ota_password: password
-esphome_esp03_api_password: password
-esphome_esp03_ota_password: password
-esphome_esp04_api_password: password
-esphome_esp04_ota_password: password
-esphome_esp05_api_password: password
-esphome_esp05_ota_password: password
-esphome_esp06_api_password: password
-esphome_esp06_ota_password: password
-esphome_esp07_api_password: password
-esphome_esp07_ota_password: password
-esphome_esp08_api_password: password
-esphome_esp08_ota_password: password
-esphome_esp09_api_password: password
-esphome_esp09_ota_password: password
-esphome_esp10_api_password: password
-esphome_esp10_ota_password: password
-esphome_esp11_api_password: password
-esphome_esp11_ota_password: password
-esphome_esp12_api_password: password
-esphome_esp12_ota_password: password
-esphome_esp13_api_password: password
-esphome_esp13_ota_password: password
-esphome_esp14_api_password: password
-esphome_esp14_ota_password: password
-esphome_esp15_api_password: password
-esphome_esp15_ota_password: password
-esphome_esp16_api_password: password
-esphome_esp16_ota_password: password
-esphome_esp17_api_password: password
-esphome_esp17_ota_password: password
-esphome_esp18_api_password: password
-esphome_esp18_ota_password: password
-esphome_esp19_api_password: password
-esphome_esp19_ota_password: password
+# Github token for HACS etc
+github_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
 
-# Github Token
-github_token: 00aa00aa00aa00aa00aa00aa00aa00aa00aa00aa
+# Access token for the RPi hass.io device in the barn
+barn_hassio_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
 
-# HTTP component settings
-http_trusted_proxies: ["192.168.0.1"]
+# Ambient Weather API keys
+ambient_api_key: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
+ambient_app_key: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
+ambient_app_key_2: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
 
-# Influx DB settings
-influxdb_username: username
-influxdb_password: password
+# Nabu Casa base URL
+nabu_base_url: https://xxxxxxx.ui.nabu.casa/
 
-# Shield in the living room
-media_player_androidtv_living_room_shield: 192.168.0.1
-
-# Samsung TV in the living room
-media_player_samsungtv_livingroom_host: 192.168.0.1
-media_player_samsungtv_livingroom_mac: AA:BB:CC:DD:EE:FF
-
-# Recorder
-recorder_db_url: "mysql://homeassistant:PASSWORD@core-mariadb/homeassistant?charset=utf8"
-
-# Plex sensors
-sensor_plex_username: frenck@example.com
-sensor_plex_password: password
-sensor_plex_token: token
-
-# Spotify
-spotify_client_id: 00000000000000000000000000000000
-spotify_client_secret: 00000000000000000000000000000000
-
-# Sonos
-sonos_hosts_living_room: 192.168.0.1
-sonos_hosts_office: 192.168.0.1
-
-# Eneco Toon API tokens
-toon_client_id: clientid
-toon_client_secret: clientsecret
-
-# Vacuum cleaners
-vacuum_living_room_host: 192.168.0.1
-vacuum_living_room_token: 12a456789b1234c67890d2345e789012
-
-# Verisure alarm system
-verisure_username: frenck@example.com
-verisure_password: password
-
-# WiFi NoT (Network Of Things = no internet) details
-wifi_iot_ssid: ssid
-wifi_iot_password: password
-wifi_iot_gateway: 192.168.0.1
-wifi_iot_subnet: 255.255.255.0
-wifi_iot_dns: 192.168.0.1
-
-# Xiaomi Aqara Gateways
-xiaomi_aqara_interface: 192.168.0.1
-xiaomi_aqara_livingroom_host: 192.168.0.1
-xiaomi_aqara_livingroom_mac: AA:BB:CC:DD:EE:FF
-xiaomi_aqara_livingroom_key: ABCDEF1234ABCDEF
-
-# Telegram Token
-telegram_api_key: abcdefghijklmnopqrstuvw-g
-telegram_frenck: 1111111111
-
-# UptimeRobot
-uptimerobot_api_key: u000000-11111111111111
+# Node-RED info
+nodered_secret: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
+nodered_access_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0.a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0.a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
