--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -7,9 +7,11 @@
 property_name: Home
 latitude: 30.000000
 longitude: -80.000000
-# Timezone names are listed here: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone: Etc/UTC
 gmail_address: user@example.com
+
+# Timezone names are listed here:
+# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Etc/UTC
 
 tuya_password: p@ssword
 
