--- a/.github/workflows/home-assistant.yml
+++ b/.github/workflows/home-assistant.yml
@@ -19,20 +19,20 @@ jobs:
         with:
           args: yamllint .
 
-  remarklint:
+  markdownlint:
     runs-on: ubuntu-latest
     steps:
       - name: Getting configuration from GitHub
         uses: actions/checkout@v1
       - name: Running MarkdownLint
-        uses: nosborn/github-action-markdown-cli@1.1.1
+        uses: nosborn/github-action-markdown-cli@v1.1.1
         with:
           files: .
           config_file: .markdownlint.yaml
 
   home_assistant_stable:
     runs-on: ubuntu-latest
-    needs: [yamllint, remarklint]
+    needs: [yamllint, markdownlint]
     steps:
       - name: Getting your configuration from GitHub
         uses: actions/checkout@v1
