--- a/config/integrations/input_select.yaml
+++ b/config/integrations/input_select.yaml
@@ -7,4 +7,4 @@
 #
 # https://www.home-assistant.io/integrations/input_select/
 #
-input_select: !include_dir_named input_select
+input_select: !include_dir_named ../entities/input_select
