--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -32,3 +32,6 @@ nabu_base_url: https://xxxxxxx.ui.nabu.casa/
 # Node-RED info
 nodered_secret: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
 nodered_access_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0.a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0.a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
+
+# API key for Azure TTS resource
+microsoft_speech_api_key: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
