--- a/config/integrations/scene.yaml
+++ b/config/integrations/scene.yaml
@@ -1,4 +1,4 @@
----
+#
 # Add support for scenes
 #
 # https://www.home-assistant.io/integrations/scene
@@ -6,4 +6,6 @@
 
 # This include is for the scene editor/UI
 scene: !include ../scenes.yaml
-scene split: !include_dir_list ../scenes
+
+# This include covers any YAML scenes defined here.
+scene mine: !include_dir_list ../scenes
