--- a/config/integrations/binary_sensor.yaml
+++ b/config/integrations/binary_sensor.yaml
@@ -1,6 +1,6 @@
 ---
 # Binary sensors gather information about the state of devices which have a
-# “digital” return value (either 1 or 0).
+# binary return value (either 1 or 0).
 #
 # https://www.home-assistant.io/integrations/binary_sensor/
 #
