--- a/config/automations/areas/basement/basement-lights.yaml
+++ b/config/automations/areas/basement/basement-lights.yaml
@@ -6,7 +6,7 @@
       to: 'Off'
   action:
     - service: switch.turn_off
-      entity_id: switch.basement_floor_lamp_gosund
+      entity_id: switch.basement_desk_lamp
     - service: light.turn_off
       entity_id: light.basement_office
 
@@ -18,7 +18,7 @@
       to: 'On'
   action:
     - service: switch.turn_on
-      entity_id: switch.basement_floor_lamp_gosund
+      entity_id: switch.basement_desk_lamp
     - service: light.turn_on
       data:
         entity_id: light.basement_office
@@ -32,7 +32,7 @@
       to: 'Working'
   action:
     - service: switch.turn_on
-      entity_id: switch.basement_floor_lamp_gosund
+      entity_id: switch.basement_desk_lamp
     - service: light.turn_on
       data:
         entity_id: light.basement_office
