Add remote hassio, move some things from smartthings

--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -18,8 +18,9 @@ tuya_password: p@ssword
 # Github token for HACS etc
 github_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
 
-# Access token for the RPi hass.io device in the barn
+# Access token for remote hassio/rpi devices
 barn_hassio_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
+zwave_hassio_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
 
 # Ambient Weather API keys
 ambient_api_key: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
