--- a/config/automations/areas/spare-room.yaml
+++ b/config/automations/areas/spare-room.yaml
@@ -4,7 +4,7 @@
     at: '20:00:00'
   action:
     service: switch.turn_on
-    entity_id: switch.spare_room_lamp
+    entity_id: switch.zw_spare_room_lamp
   mode: single
 
 - alias: Turn off spare room light on phone charging
@@ -18,7 +18,7 @@
     before: '01:00:00'
   action:
     service: switch.turn_off
-    entity_id: switch.spare_room_lamp
+    entity_id: switch.zw_spare_room_lamp
   mode: single
 
 - alias: Toggle nightstand lamp when button 1 pushed
@@ -31,7 +31,7 @@
       value: pushed
   action:
     service: switch.toggle
-    entity_id: switch.spare_room_lamp
+    entity_id: switch.zw_spare_room_lamp
   mode: single
 
 - alias: Toggle dresser lamp when button 2 pushed
@@ -53,7 +53,7 @@
     webhook_id: flic_spare-room_click
   action:
     service: switch.toggle
-    entity_id: switch.spare_room_lamp
+    entity_id: switch.zw_spare_room_lamp
   mode: single
 
 - alias: Toggle dresser lamp on Flic double-click
@@ -71,7 +71,7 @@
     webhook_id: flic_spare-room_hold
   action:
     - service: switch.turn_off
-      entity_id: switch.spare_room_lamp
+      entity_id: switch.zw_spare_room_lamp
     - service: switch.turn_off
       entity_id: switch.spare_room_dresser
   mode: single
