--- a/config/automations/areas/basement/basement-stairs.yaml
+++ b/config/automations/areas/basement/basement-stairs.yaml
@@ -1,24 +1,24 @@
 - alias: Turn on basement stairs light on motion
   trigger:
     platform: state
-    entity_id: binary_sensor.basement_stairs_motion
+    entity_id: binary_sensor.zw_basement_stairs_motion
     to: 'on'
   action:
     service: light.turn_on
     data:
-      entity_id: light.basement_stairs_light
+      entity_id: light.zw_basement_stairs_light_level
       brightness_pct: 40
   mode: single
 
 - alias: Turn off basement stairs light after motion end
   trigger:
     platform: state
-    entity_id: binary_sensor.basement_stairs_motion
+    entity_id: binary_sensor.zw_basement_stairs_motion
     to: 'off'
     for:
       minutes: 2
   action:
     service: light.turn_off
-    entity_id: light.basement_stairs_light
+    entity_id: light.zw_basement_stairs_light_level
   mode: single
 
