Update primary dashboard

--- a/config/dashboards/ui-primary/dashboard.yaml
+++ b/config/dashboards/ui-primary/dashboard.yaml
@@ -2,6 +2,8 @@ title: Primary
 views:
   - !include views/main.yaml
   - !include ../common-views/weather.yaml
+  - !include views/indoor_climate.yaml
+  - !include views/cameras.yaml
   - !include ../common-views/climate.yaml
   - !include views/tech.yaml
   - !include views/smoke.yaml
