--- a/config/customizations/entities/basement.yaml
+++ b/config/customizations/entities/basement.yaml
@@ -6,3 +6,6 @@ media_player.basement:
 
 sensor.basement_door_sensor_battery:
   friendly_name: Basement door sensor battery
+
+sensor.zw_basement_stairs_humidity:
+  icon: mdi:water-percent
