--- a/config/dashboards/ui-primary/views/main.yaml
+++ b/config/dashboards/ui-primary/views/main.yaml
@@ -330,7 +330,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: switch.barn_barn_front_lights
+            entity: switch.barn_front_down_lights
             hold_action:
               action: more-info
             icon: 'mdi:outdoor-lamp'
@@ -400,7 +400,7 @@ cards:
             icon_height: 36px
             show_icon: true
             show_name: true
-            entity: switch.barn_barn_flood_lights
+            entity: switch.barn_back_flood_lights
             hold_action:
               action: more-info
             tap_action:
