Add octoprint, light-switch integrations

--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -36,3 +36,6 @@ nodered_access_token: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0.a0a0a0a0a0a0a0a0a0a0a0a0a0a
 
 # API key for Azure TTS resource
 microsoft_speech_api_key: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
+
+# API key for OctoPrint
+octoprint_api_key: a0a0a0a0a0aa0a0
