Add temperature unit

--- a/config/dashboards/ui-primary/views/printer.yaml
+++ b/config/dashboards/ui-primary/views/printer.yaml
@@ -15,6 +15,7 @@ cards:
     font: Roboto
     scale: 1
     round: true
+    temperature_unit: C
     light_entity: light.basement_desk_lamp
 
   - type: picture-glance
