--- a/config/dashboards/ui-minimal/views/main.yaml
+++ b/config/dashboards/ui-minimal/views/main.yaml
@@ -18,7 +18,7 @@ cards:
             tap_action:
               action: toggle
             type: button
-          - entity: light.bookshelf_lights
+          - entity: light.zw_bookshelf_lights
             hold_action:
               action: more-info
             icon: 'mdi:track-light'
