--- a/config/automations/areas/front-room.yaml
+++ b/config/automations/areas/front-room.yaml
@@ -5,7 +5,9 @@
     to: 'on'
   action:
     service: light.turn_on
-    entity_id: light.bookshelf_lights
+    data:
+      entity_id: light.zw_bookshelf_lights
+      brightness_pct: 100
 
 - alias: Turn off bookshelf lights when front room lamp turned off
   trigger:
@@ -14,4 +16,5 @@
     to: 'off'
   action:
     service: light.turn_off
-    entity_id: light.bookshelf_lights
+    entity_id: light.zw_bookshelf_lights
+
