--- a/config/integrations/remote_homeassistant.yaml
+++ b/config/integrations/remote_homeassistant.yaml
@@ -39,3 +39,4 @@ remote_homeassistant:
         - service_registered
         - zwave.network_ready
         - zwave.node_event
+        - zha_event
