--- a/config/dashboards/ui-primary/views/printer.yaml
+++ b/config/dashboards/ui-primary/views/printer.yaml
@@ -1,6 +1,17 @@
 icon: mdi:printer-3d
 path: 3dprinter
 cards:
+  - type: button
+    entity: switch.3d_printer_power
+    icon_height: 36px
+    name: Power
+    show_icon: true
+    show_name: true
+    tap_action:
+      action: toggle
+    hold_action:
+      action: more-info
+
   - type: 'custom:threedy-card'
     base_entity: sensor.ender_3_v2
     name: Ender 3 V2
@@ -16,7 +27,6 @@ cards:
     scale: 1
     round: true
     temperature_unit: C
-    light_entity: light.basement_desk_lamp
 
   - type: picture-glance
     title: 3D Printer
